# to-see-the-world

./: .gitignore  README.md  requirements.txt  setup.cfg
src/to_see_the_world/: config.ini  coordinates_to_countries.py  out.gpx  test_get_geo.py  to_see_the_world.py  update_local_data2.py
src/to_see_the_world/supporting_data/: README.md  bounded_point.py  cities500.py  country_boundaries_shifted.py  country_data.csv  parts_replacement_17432968_b12156090.csv  update_local_data.py  update_local_data2.py  world_admin_divisions.csv
src/to_see_the_world/supporting_data/Delete/: country_boundaries_shifted.py  country_data.csv  shifted_country_boundaries.csv
