
[metadata]
name = to-see-the-world
version = 0.0.1
author = Carolyn Mason
author_email = carolynmason3@gmail.com
description = 
classifiers =
    Programming Language :: Python :: 3

[options]
install_requires =
    pandas
package_dir =
    = src
packages = to-see-the-world
python_requires = >=3.8


[options.package_data]
promiditheus =
    instruments.yml
    scale.yml